...
    <string name="continue_search_in_performers">Continue search in Performers</string>
    <string name="only_search_info">Or continue search in a more specific context:</string>
    <string name="search_in_movies_only"><u>Search only in Movies</u></string>
    <string name="search_in_performers_only"><u>Search only in Performers</u></string>

    <!-- Basic Dialog -->
    <string name="discard_changes">Do you really want to discard changes?</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Warnings -->
    <string name="warning_movie_title">Title is required</string>
    <string name="warning_performer_name">Name is required.</string>
    <string name="warning_performer_minimum_movies">You need to link at least one movie.</string>
...
    <!-- Image Descriptions -->
    <string name="list_item_portrayable_image">Image representing this entity.</string>

    <string name="no_performers_available">No Performers available</string>
    <string name="select_performers">Select Performers</string>
    <string name="select_movies">Select Movies</string>
    <string name="ok">OK</string>
    <string name="change_image">Change</string>
    <string name="remove_image">Remove</string>
</resources>

