...
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_name_icon"
                app:layout_constraintTop_toBottomOf="@id/button_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>
...
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_linked_movies_icon"
                app:layout_constraintTop_toBottomOf="@id/edit_occupations">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/linked_movies_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Linked Movies"
                    android:inputType="textPersonName"
                    android:text="" />

...
