<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/commit"
        android:icon="@drawable/baseline_check_24"
        android:title="@string/edit_action_commit"
        app:iconTint="?colorOnSurface"
        app:showAsAction="always" />
</menu>
